--- a/src/signpuddle-web/package.json
+++ b/src/signpuddle-web/package.json
@@ -21,6 +21,7 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "cypress": "^13.6.0",
+    "jest": "^29.7.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
