--- a/src/SignPuddle.API.E2ETests/SignPuddle.API.E2ETests.csproj
+++ b/src/SignPuddle.API.E2ETests/SignPuddle.API.E2ETests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0-preview.3.24172.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="9.0.5" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
