Refactor tests and services for SPML import functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 php-legacy/
 src/signpuddle-web/cypress/screenshots/
 src/signpuddle-web/cypress/videos/
-src/SignPuddle.API/signwritinglibraries/
+signwritinglibraries/
