Refactor API Controllers to Inherit from SignPuddleBaseController
- Updated DictionaryController, FormatsController, RenderController, SPMLController, SignsController, SymbolController, and UsersController to inherit from SignPuddleBaseController for consistent response handling.
- Removed redundant SPMLController definition and cleaned up unused namespaces in various files.
- Deleted SpmlCosmosController as its functionality is now integrated into the main SPMLController.
- Added a new SignPuddleBaseController to centralize response formatting for Ok, BadRequest, and CreatedAtAction methods based on the environment.
- Updated project references to include necessary files for testing and output directory management.
- Removed unnecessary usings and cleaned up code in repository interfaces and implementations.

--- a/src/SignPuddle.API.E2ETests/SignPuddle.API.E2ETests.csproj
+++ b/src/SignPuddle.API.E2ETests/SignPuddle.API.E2ETests.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\SignPuddle.API\SignPuddle.API.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\sgn4-small.spml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
