Add IdFromHash method and corresponding unit tests for consistent GUID generation

--- a/src/SignPuddle.API/SignPuddle.API.Tests/SignPuddle.API.Tests.csproj
+++ b/src/SignPuddle.API/SignPuddle.API.Tests/SignPuddle.API.Tests.csproj
@@ -22,4 +22,8 @@
     <None Include="Data\**\*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="Unit\**\*.cs" />
+  </ItemGroup>
+
 </Project>
